--- a/form.html
+++ b/form.html
@@ -24,7 +24,7 @@
 			<p>Amount:</p>
 			<input type="text"/> USD
 			<div class="clearFix"></div>
-			<a class="primaryBtn" href="https://www.westernunion.com/us/en/send-money/start.html">Get Started Now</a>
+			<a class="primaryBtn" href="https://www.westernunion.com/us/en/send-money/start.html" target="_blank" >Get Started</a>
 		</div>
 	</aside>
 </body>
