--- a/amp.html
+++ b/amp.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Send money online to India | Western Union</title>
-    <link rel="canonical" href="amp.html" />
+    <link rel="canonical" href="https://manish8081.github.io/amptest/amp.html" />
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
     <script type="application/ld+json">
       {
