--- a/send-money-to-india.html
+++ b/send-money-to-india.html
@@ -201,6 +201,8 @@ amp-accordion section ul li a {
 }
 
 .primaryBtn{ padding:10px 15px;margin:5px;font-size:14px;border:1px solid #fff; color:#fff;background:#337ab7;border-radius:4px;text-align:center; float: right; margin-right: 5px; font-weight: normal}
+.inr aside{ float: left;}
+
 
 @media(max-width:380px){
 	.headmenu li a { font-size:14px;}
@@ -250,7 +252,7 @@ amp-accordion section ul li a {
         </amp-carousel>
     </div>
     <div  class="inr">
-		<aside style="float: left">
+		<aside>
 			<h4>Current Locked-in exchange rate: </h4> 
         <span class="flag">
           <amp-img  src="Flag01.png" alt="flag" height="14" width="22" ></amp-img><span class ="usd">1 USD = </span><amp-img src="Flag02.png" height="14" width="22"  alt="flag" ></amp-img><span class ="usd">66.6401 INR</span>
