--- a/send-money-to-india.html
+++ b/send-money-to-india.html
@@ -14,202 +14,7 @@
       <script async custom-element="amp-social-share" src="https://cdn.ampproject.org/v0/amp-social-share-0.1.js"></script>
       <script async custom-element="amp-accordion" src="https://cdn.ampproject.org/v0/amp-accordion-0.1.js"></script>
 
-    <style amp-custom>
-         div.inr {
-  padding: 3%;
-  margin:5px 0;
-  background: #e9f5fb;
-  font-weight: 700;
-  width: 94%; float:left;
-}
-div.inr aside{float:left}
-.clearFix { clear:both}
-body {
-  font-family: arial;
-  font-size: 14px;
-}
-ul { list-style-type: none}
-h1 {
-  font-size: 18px;
-}
-a {text-decoration:none}
-.headmenu li a,amp-sidebar ul li a {
-  font-size: 16px;
-}
-
-
-.logo {
-  height: 80px;
-  background-color: #000;
-}
-
-
-.flag {
-  margin-top: 5px;
-  display: block;
-}
-
-.text {
-  text-align: justify;
-  line-height: 22px;
-  margin-top: 10px;
-  padding: 6px 15px;
-}
-
-.usd {
-  color: green;
-  margin-left: 4px;
-}
-
-.text ul, h4 {
-  margin: 0;
-  padding: 0;
-}
-
-.text li {
-  background: url(https://www.westernunion.com/etc/designs/wu-loggedout/clientlibs/images/checkmark.png) no-repeat;
-  padding-left: 32px;
-  margin-top: 10px;
-}
-
-.gettingstarted ul li {
-  height: 35px;
-}
-
-.gettingstarted ul li.one,.gettingstarted ul li.three,.gettingstarted ul li.two {
-  padding-left: 35px;
-  margin-top: 10px;
-}
-
-.gettingstarted ul li.one {
-  background: url(1.jpg) no-repeat;
-}
-
-.gettingstarted ul li.two {
-  background: url(2.jpg) no-repeat;
-}
-
-.gettingstarted ul li.three {
-  background: url(3.jpg) no-repeat;
-}
-
-.headmenu {
-  margin: 0;
-  padding: 0;
-  background-color: #363636;
-}
-
-.headmenu li {
-  padding: 0 10px;
-  margin: 10px 0;
-  display: inline-block;
-}
-
-.headmenu li a {
-  color: #fff;
-}
-
-.clr {
-  clear: left;
-}
-
-.sliderimage {
-  margin-left: 0;
-}
-
-amp-sidebar {
-  width: 250px;
-  padding-right: 10px;
-  background-color: #ebebeb;
-}
-
-amp-sidebar ul li a {
-  color: #3f3f3f;
-}
-
-.amp-sidebar-image {
-  line-height: 100px;
-  vertical-align: middle;
-}
-
-.amp-close-image {
-  top: 15px;
-  left: 225px;
-  cursor: pointer;
-}
-
-li {
-  margin-bottom: 20px;
-  list-style: none;
-}
-
-.btn {
-  background: 0 0;
-  border: 0;
-  color: #f0ad1a;
-  font-size: 20px;
-  float: left;
-  margin-top: 6px;
-}
-
-.startbutton {
-  background: url(btnbg.png) repeat-x;
-  border-radius: 8px;
-  height: 43px;
-  border: 1px;
-  font-size: 16px;
-  padding: 0 20px;
-  font-weight: 700;
-  color: #2d1601;
-  display:table;
-  margin: auto;
-}
-
-.social-box {
-  text-align: center;
-  background-color: #efefef;
-  padding: 15px 0;
-}
-
-.accordiondiv {
-  background: #efefef;
-}
-
-.video {
-  margin-top: 20px;
-}
-
-.slider {
-  background: #000;
-}
-
-amp-accordion section h4 {
-  background: #252525;
-  padding: 10px 0 10px 10px;
-  font-size: 18px;
-}
-
-amp-accordion section ul li {
-  color: #000;
-  padding: 10px 0;
-  margin: 0;
-  font-size: 16px;
-}
-
-amp-accordion section ul li a {
-  color: #000;
-}
-
-.primaryBtn{ padding:10px 15px;margin:5px;font-size:14px;border:1px solid #fff; color:#fff;background:#337ab7;border-radius:4px;text-align:center; float: right; margin-right: 5px; font-weight: normal}
-.inr aside{ float: left;}
-
-
-@media only screen and (max-width:380px){
-	.headmenu li a { font-size:14px;}
-	.headmenu li:last-child {padding-right:0 }
-	.primaryBtn { margin: 15px 0 0 0; width:90%}
-}
-    </style>
+    <style amp-custom>.btn,div.inr,div.inr aside{float:left}div.inr{padding:3%;margin:5px 0;background:#e9f5fb;font-weight:700;width:94%}.clearFix{clear:both}body{font-family:arial;font-size:14px}ul{list-style-type:none}h1{font-size:18px}a{text-decoration:none}.headmenu li a,amp-sidebar ul li a{font-size:16px}.logo{height:80px;background-color:#000}.flag{margin-top:5px;display:block}.text{text-align:justify;line-height:22px;margin-top:10px;padding:6px 15px}.usd{color:green;margin-left:4px}.text ul,h4{margin:0;padding:0}.text li{background:url(https://www.westernunion.com/etc/designs/wu-loggedout/clientlibs/images/checkmark.png) no-repeat;padding-left:32px;margin-top:10px}.gettingstarted ul li{height:35px}.gettingstarted ul li.one,.gettingstarted ul li.three,.gettingstarted ul li.two{padding-left:35px;margin-top:10px}.gettingstarted ul li.one{background:url(1.jpg) no-repeat}.gettingstarted ul li.two{background:url(2.jpg) no-repeat}.gettingstarted ul li.three{background:url(3.jpg) no-repeat}.headmenu{margin:0;padding:0;background-color:#363636}.headmenu li{padding:0 10px;margin:10px 0;display:inline-block}.headmenu li a{color:#fff}.clr{clear:left}.sliderimage{margin-left:0}amp-sidebar{width:250px;padding-right:10px;background-color:#ebebeb}amp-sidebar ul li a{color:#3f3f3f}.amp-sidebar-image{line-height:100px;vertical-align:middle}.amp-close-image{top:15px;left:225px;cursor:pointer}li{margin-bottom:20px;list-style:none}.btn{background:0 0;border:0;color:#f0ad1a;font-size:20px;margin-top:6px}.startbutton{background:url(btnbg.png) repeat-x;border-radius:8px;height:43px;border:1px;font-size:16px;padding:0 20px;font-weight:700;color:#2d1601;display:table;margin:auto}.social-box{text-align:center;background-color:#efefef;padding:15px 0}.accordiondiv{background:#efefef}.video{margin-top:20px}.slider{background:#000}amp-accordion section h4{background:#252525;padding:10px 0 10px 10px;font-size:18px}amp-accordion section ul li{color:#000;padding:10px 0;margin:0;font-size:16px}amp-accordion section ul li a{color:#000}.primaryBtn{padding:10px 15px;margin:5px;font-size:14px;border:1px solid #fff;color:#fff;background:#337ab7;border-radius:4px;text-align:center;float:right;font-weight:400}.inr aside{float:left}@media only screen and (max-width:380px){.headmenu li a{font-size:14px}.headmenu li:last-child{padding-right:0}.primaryBtn{margin:15px 0 0;width:90%}}</style>
   </head>
   <body>
    <amp-sidebar id='sidebar1' layout="nodisplay">
