--- a/send-money-to-india-form.html
+++ b/send-money-to-india-form.html
@@ -58,7 +58,6 @@
 	<nav class="headmenu">
 	  <li><a href="https://www.westernunion.com/us/en/send-money/start.html">Send Money</a></li>
       <li><a href="https://www.westernunion.com/us/en/price-estimator/start.html">Estimate Price</a></li>
-      <li><a href="https://agentportal.westernunion.com/ap/loginap.do">Agent</a></li>
 	</nav>
 	</section>
 	
@@ -80,7 +79,7 @@
         </span>
 		</aside>
 		
-		<a href="#" class="primaryBtn">Send Money</a>
+		<a href="https://www.westernunion.com/us/en/send-money/start.html" class="primaryBtn">Send Money</a>
 		
         </div>
 		
